<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopianoclasico"
    android:orientation="vertical"
    tools:context=".pianosimple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Ivs1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaDo"
            android:src="@drawable/teclado"
            />

        <ImageButton
            android:id="@+id/Ivs2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaRe"
            android:src="@drawable/teclare"
            />
        <ImageButton
            android:id="@+id/Ivs3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaMi"
            android:src="@drawable/teclami"
            />

        <ImageButton
            android:id="@+id/Ivs4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaFa"
            android:src="@drawable/teclafa"
            />
        <ImageButton
            android:id="@+id/Ivs5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaSol"
            android:src="@drawable/teclasol"
            />

        <ImageButton
            android:id="@+id/Ivs6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaLa"
            android:src="@drawable/teclala"
            />
        <ImageButton
            android:id="@+id/Ivs7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaLa"
            android:src="@drawable/teclasi"
            />

        <ImageButton
            android:id="@+id/Ivs8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaSi"
            android:src="@drawable/teclado8"
            />
    </LinearLayout>
</LinearLayout>