<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopianorquestal"
    android:orientation="vertical"
    tools:context=".pianorquesta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Ivo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaDo"
            android:src="@drawable/teclaguitarrado"
            />

        <ImageButton
            android:id="@+id/Ivo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaRe"
            android:src="@drawable/teclatimbalre"
            />
        <ImageButton
            android:id="@+id/Ivo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaMi"
            android:src="@drawable/teclatubami"
            />

        <ImageButton
            android:id="@+id/Ivo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaFa"
            android:src="@drawable/teclabajofa"
            />
        <ImageButton
            android:id="@+id/Ivo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaSol"
            android:src="@drawable/teclaviolinsol"
            />

        <ImageButton
            android:id="@+id/Ivo6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaLa"
            android:src="@drawable/teclaocarinala"
            />
        <ImageButton
            android:id="@+id/Ivo7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaLa"
            android:src="@drawable/teclaxilofonosi"
            />

        <ImageButton
            android:id="@+id/Ivo8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/DescteclaSi"
            android:src="@drawable/teclasaxofondo8"
            />
    </LinearLayout>
</LinearLayout>